ensure solarmutex is locked when closing splashscreen (tdf#137177)

AFAICT all drawing is done with solarmutex held, at least Skia
asserts that and this case is the only problem I've found. Here
the solarmutex is not held because of c5cf78e1529970c04e1999e1
that unlocks it for DeInit(), but that call leads to closing
the splashscreen.

Change-Id: I453f71cc53fe229e539a862927a58fd4161c40d9
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/104423
Tested-by: Jenkins
Reviewed-by: Luboš Luňák <l.lunak@collabora.com>